# methamine

./: .gitignore  CMakeLists.txt  LICENSE  README.md
build_linux/: server
client/: chatClient.cpp  chatClient.hpp  client.cpp  clientUI.cpp  clientUI.hpp
common/: protocols.hpp
server/: chatRoom.cpp  chatRoom.hpp  clientSession.cpp  clientSession.hpp  server.cpp  server.hpp  server_main.cpp
